clang/test/BSC/BSCIR/init-deref-uninit.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test that init analysis catches reads through uninitialized pointers
// when the destination of an assignment has Deref projections.

typedef struct {
  int *_Borrow p;
} S;

typedef struct {
  S inner;
} Outer;

// Simple: deref read of uninit struct field.
_Safe int test_simple_deref_uninit(void) {
  S s;
  return *(s.p); // expected-error {{use of uninitialized value: `s.p`}}
}

// Simple: deref write through uninit struct field.
_Safe void test_deref_write_uninit(void) {
  S s;
  *(s.p) = 2; // expected-error {{use of uninitialized value: `s.p`}}
}

// Nested: deref read through uninit nested struct field.
_Safe int test_nested_deref_uninit(void) {
  Outer o;
  return *(o.inner.p); // expected-error {{use of uninitialized value: `o.inner.p`}}
}

// Nested: deref write through uninit nested struct field.
_Safe void test_nested_deref_write_uninit(void) {
  Outer o;
  *(o.inner.p) = 2; // expected-error {{use of uninitialized value: `o.inner.p`}}
}

// Bare local: deref of uninitialized pointer.
_Safe int test_bare_deref_uninit(int *_Borrow *_Borrow pp) { // expected-error {{type of 'int *_Borrow' cannot be qualified by '_Borrow'}}
  int *_Borrow q;
  return *q;
}

// No error: deref after proper initialization.
_Safe void test_deref_after_init(void) {
  int x = 10;
  S s;
  s.p = &_Mut x;
  *(s.p) = 2; // ok
}

// No error: read through initialized field.
_Safe int test_read_after_init(void) {
  int x = 10;
  S s;
  s.p = &_Mut x;
  return *(s.p); // ok
}
